# tiny-secp256k1

./: .eslintrc.cjs  .gitignore  .gitmodules  .npmignore  .prettierignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  binding.gyp  bundle.js  bundle.js.LICENSE.txt  ecurve.js  index.html  index.js  js.js  package-lock.json  package.json  tsconfig-base.json  tsconfig-cjs.json  tsconfig.browser.json  tsconfig.json  tsconfig.node.json
.github/workflows/: ci.yaml  gh-pages.yaml
benches/: README.md  cryptocoinjs_secp256k1.js  fixtures.js  index.js  noble_secp256k1.js  package-lock.json  package.json
examples/: README.md
examples/random-in-node/: bin.js  index.js  package-lock.json  package.json  random.js  random_browser.js
examples/react-app/: index.js  package-lock.json  package.json  webpack.config.js
examples/simple-timing-test/: run.js
lib/: addon.js  api.js  index.browser.js  index.js  rand.js  secp256k1.js  validate.js  validate_error.js  validate_wasm.js  wasm.js  wasm_loader.browser.js  wasm_loader.js  wasm_rand.browser.js  wasm_rand.js
native/: addon.cpp
scripts/: .gitignore  Makefile  checklib  ecdsa.cpp  json.hpp  points.cpp  privates.cpp  shared.hpp  utils.hpp
secp256k1/: Cargo.toml
secp256k1-node/: Cargo.toml
secp256k1-node/src/: lib.rs
secp256k1-wasm/: Cargo.toml
secp256k1-wasm/src/: lib.rs
secp256k1/src/: lib.rs
src/: lib.rs
src_ts/: addon.ts  api.ts  index.browser.ts  index.ts  rand.browser.ts  rand.ts  validate.ts  validate_error.ts  wasm.ts  wasm_loader.browser.ts  wasm_loader.ts  wasm_path.ts  wasm_path_cjs.ts
tests/: browser-run.js  browser.webpack.js  ecdsa.js  generate.cpp  index.html  index.js  points.js  privates.js  rfc6979.js  schnorr.js  util.js
tests/fixtures/: ecdsa.json  points.json  schnorr.json
tiny-secp256k1/: Cargo.toml
tiny-secp256k1-wasm/: Cargo.toml
tiny-secp256k1-wasm/src/: into_pubkey.rs  lib.rs  macros.rs
tiny-secp256k1/src/: consts.rs  context.rs  error.rs  lib.rs  pubkey.rs  types.rs  utils.rs  validate.rs
util/: addon-target-name.js  on-install.js  update-package-json.js  wasm-strip.js
util/gen-fixtures/: .gitignore  Makefile  shared.hpp
util/patches/: electron-stream+8.0.0.patch
