[package]
name = "secp256k1-wasm"
version = "0.0.0"
authors = ["Kirill Fomichev <fanatid@ya.ru>"]
edition = "2018"
description = "A Rust library for building tiny-secp256k1 WASM."
rust-version = "1.50"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
# `[patch.crates-io]` is not working :(
# This commit is where secp256k1-sys version changed to 0.4.1
secp256k1-sys = { version = "0.4.1", default-features = false, git = "https://github.com/rust-bitcoin/rust-secp256k1", rev = "455ee57ba4051bb2cfea5f5f675378170fb42c7f" }

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
