[package]
name = "secp256k1-wasm"
version = "0.0.0"
authors = ["Kirill Fomichev <fanatid@ya.ru>"]
edition = "2021"
description = "A Rust library for building tiny-secp256k1 WASM."
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies.secp256k1-sys]
version = "=0.8.1"
default-features = false
features=[
    "recovery",
    "lowmemory"
]

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
