[package]
name = "secp256k1-wasm"
version = "0.0.0"
authors = ["Kirill Fomichev <fanatid@ya.ru>"]
edition = "2018"
description = "A Rust library for building tiny-secp256k1 WASM."
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
# `[patch.crates-io]` is not working :(
secp256k1-sys = { version = "0.4.0", default-features = false, git = "https://github.com/fanatid/rust-secp256k1", branch = "more-features" }
