[package]
name = "tiny-secp256k1"
version = "0.2.0"
authors = [
    "Kirill Fomichev <fanatid@ya.ru>",
    "Jonathan Underwood <junderwood@bitcoinbank.co.jp>"
]
edition = "2018"
description = "A Rust library for building tiny-secp256k1 WASM."
rust-version = "1.50"
license = "MIT"

[lib]
crate-type = ["lib"]

[features]
default = ["rand"]
no_std = []
minimal_validation = []

[dependencies]
rand = { version = "0.8.4", optional = true }

[dependencies.secp256k1]
git = "https://github.com/rust-bitcoin/rust-secp256k1"
rev = "e4fb57559062d584e26c750c01d51ce4fc7282bb"
default-features = false
features = ["recovery", "lowmemory"]
