[package]
name = "tiny-secp256k1"
version = "0.2.0"
authors = [
    "Kirill Fomichev <fanatid@ya.ru>",
    "Jonathan Underwood <junderwood@bitcoinbank.co.jp>"
]
edition = "2021"
description = "A Rust library for building tiny-secp256k1 WASM."
license = "MIT"

[lib]
crate-type = ["lib"]

[features]
default = ["std", "rand", "getrandom"]
std = ["rand/std", "rand/std_rng"]
minimal_validation = []

[dependencies]
rand = { version = "0.8.5", default-features = false, optional = true }
getrandom = { version = "0.2.3", features = ["js"], optional = true }

[dependencies.secp256k1]
version = "=0.27.0"
default-features = false
features = ["recovery", "lowmemory"]
